refactor: improve modal closure for concurrent events